fix z-index issue + set onblur

--- a/src/css/additional-styles/flatpickr.scss
+++ b/src/css/additional-styles/flatpickr.scss
@@ -42,7 +42,7 @@ $daysWidth: $daySize*7;
 }
 
 .flatpickr-calendar.static.open {
-    z-index: 20px;
+    z-index: 20;
 }
 
 .flatpickr-days {
